--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@ant-design/icons": "^4.7.0",
+    "antd": "^4.22.7",
+    "react-phone-input-2": "^2.15.1"
   },
   "scripts": {
     "start": "react-scripts start",
